[package]
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
name = "bill"
version = "0.4.2"
license = "MIT/Apache-2.0"
repository = "https://github.com/hoodie/bill-rs"
documentation = "https://docs.rs/bill/"
edition = "2018"

description = "💸 A minimal library for creating invoices. Feel free to review and correct it."
keywords = ["Money", "Billing"]

[dependencies]
ordered-float = "3.0"
claude = { version = "0.3", features = ["serialization"] }

serde = { version = "1.0.200", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serialization = ["serde", "serde_json"]
